--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="pic"></div>
     <div id="quote">Quotes</div>
 
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
